--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -22,7 +22,7 @@
                     <a href="/home">Home</a> <br>
                     <a href="/team">Team</a><br>
                     <a href="/portafolio">Portafolio</a><br>
-                    <a href="/contact">Contact</a>
+                    <a href="/contact">Contacto</a>
                     </b>
 
                 </div>
