--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -63,7 +63,7 @@
       <li class="card-services">
         <div
           class="card__background"
-          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AFGJ81oXjxfORIZpom1y8hFKdFXq1MxSpbmG7CqikZ2tpeYzmhw4QFdrenkHjVjLgfFgay8bx6pFUdzdcnHk5n4Cbe7OyPw5=w1920-h929)"
+          style="background-image: url('https://lh3.googleusercontent.com/drive-viewer/AFGJ81oXjxfORIZpom1y8hFKdFXq1MxSpbmG7CqikZ2tpeYzmhw4QFdrenkHjVjLgfFgay8bx6pFUdzdcnHk5n4Cbe7OyPw5=w1920-h929')"
         ></div>
       </li>
       <li class="card-services">
