Update Assets and adding img in components

--- a/src/app/features/page/Team/team/team.component.html
+++ b/src/app/features/page/Team/team/team.component.html
@@ -1,6 +1,6 @@
 <br><br><br>
 <div class="container d-flex justify-content-center">
-    <img src="./assets/img/PROX.png" class=" img-fluid prox" alt="...">
+    <img src="https://lh3.googleusercontent.com/drive-viewer/AFGJ81rSJEy7IUrTTvSNepTr0TC9tTBA6w0o34K_-vZNLJSvs3Ypztt6cfxCs6RWYhMbJQnt-dXJX2yq491kfjlXC-8H0jtk=w1920-h929" class=" img-fluid prox" alt="...">
 </div>
 
 
