--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -26,7 +26,7 @@ img {
   left: 0;
   width: 100%;
   height: 100px;
-  background-image: url("/./assets/img/wave.png");
+  background-image: url('https://lh3.googleusercontent.com/drive-viewer/AFGJ81rRsOSD-q_WQYvU2n_MF-sMuAzaiW99u7sh1ZQRdIqndrb5_N_zkdp8kBJDlyvroKHnP_w7vpt14hRceGxLmdqr1jzb=w1920-h929');
   background-size: 1000px 100px;
   animation: wave 3s linear infinite;
 }
@@ -324,7 +324,7 @@ img {
 
 .ours {
   // background-color: #fcbd07;
-  background-image: url("https://lh3.googleusercontent.com/drive-viewer/AFGJ81rYKOJkqvOGeeVdbBVwsE1tmCBcYQvIe6Vl9L6mtwqTAgBfYJY7eeFM2BfxdpAA59f4tbsyanwH0VBdjvjySC5744Vr=w1920-h929");
+  background-image: url('https://lh3.googleusercontent.com/drive-viewer/AFGJ81rYKOJkqvOGeeVdbBVwsE1tmCBcYQvIe6Vl9L6mtwqTAgBfYJY7eeFM2BfxdpAA59f4tbsyanwH0VBdjvjySC5744Vr=w1920-h929');
     background-attachment: fixed;
   border-radius: 10px;
   color:#E8E7E7;
