--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -25,7 +25,7 @@
                 <div class="max-logo text-center">
 
 
-                    <img src="./assets/img/Logo_Onspace.png"
+                    <img src="https://lh3.googleusercontent.com/drive-viewer/AFGJ81rza3WGhtlTyggnrqaVca9J37L1P-NPtxskMkdJGejWCjfL3L_LhdviDONaaRuDNGfbiW32-x5NKyRPeQSKlqDbbYo-Xg=w1920-h929"
                         class="figure-img img-fluid rounded texte-center"
                         alt="A generic square placehol  der image with rounded corners in a figure.">
                 </div>
