--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -10,7 +10,7 @@
                     <div class="max-logo text-center">
                         <img src="https://lh3.googleusercontent.com/drive-viewer/AFGJ81rtW2oEmUYcjhNkZdUwvFrVHY1bYL4wlIAPZB7cGqZBQF4CJwDSWp47klMYMLYIQ0y-i2b2ZVR_kOVyr__2dOlTF0ff=w1920-h929"
                             class="figure-img img-fluid rounded"
-                            alt="A generic square placeholder image with rounded corners in a figure.">
+                            alt="logo">
                     </div>
                 </figure>
             
@@ -34,7 +34,7 @@
 
             <div class="column">
                 <b>
-                <p class="text" style="margin: 10% auto">Expande tu marca hasta el universo</p></b>
+                <p class="text" style="margin: 10% auto">"Expande tu marca hasta el universo"</p></b>
             </div>
     
         </div>
