--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -19,8 +19,8 @@
             <div class="column">
                 <div class="mini-nav text-center">
                     <b>
-                    <a href="/home">Home</a> <br>
-                    <a href="/team">Team</a><br>
+                    <a href="/home">Inicio</a> <br>
+                    <a href="/team">Equipo</a><br>
                     <a href="/portafolio">Portafolio</a><br>
                     <a href="/contact">Contacto</a>
                     </b>
