--- a/src/app/Shared/header/header.component.html
+++ b/src/app/Shared/header/header.component.html
@@ -9,7 +9,7 @@
             <nav class="text-center">
                 <br>
                 <a href="/home">Inicio</a> 
-                <a href="/team">Team</a>
+                <a href="/team">Equipo</a>
                 <a href="/portafolio">Portafolio</a>
                 <a href="/contact">Contacto</a>
                 
