--- a/src/app/Shared/footer/footer.component.scss
+++ b/src/app/Shared/footer/footer.component.scss
@@ -1,3 +1,8 @@
+ @font-face {
+     font-family: "Arquitecta";
+     src: url('/src/assets/fonts/Arquitecta.otf');
+ }
+
  * {
      font-family: "Arquitecta", sans-serif;
     margin: 0;
