--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.scss
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.scss
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: "Arquitecta";
+    src: url('../../../../../assets/fonts/Arquitecta.otf');
+}
 * {
     font-family: "Arquitecta", sans-serif;
     margin: 0;
