--- a/src/app/features/page/Contact/contact/contact.component.scss
+++ b/src/app/features/page/Contact/contact/contact.component.scss
@@ -1,5 +1,18 @@
+ @font-face {
+     font-family: "Arquitecta";
+     src: url('../../../../../assets/fonts/Arquitecta.otf');
+ }
+ @font-face {
+     font-family: "Arquitecta Black";
+     src: url('../../../../../assets/fonts/ArquitectaBlack.otf');
+ }
+
+ @font-face {
+     font-family: "Montserrat Bold";
+     src: url('../../../../../assets/fonts/Montserrat-Bold.ttf') format("truetype");
+ }
  * {
-     font-family: "Arquitecta", sans-serif;
+     font-family: "Arquitecta";
         margin: 0;
         padding: 0;
         -webkit-box-sizing: border-box;
@@ -137,7 +150,7 @@ textarea {
     font-size: 60px;
     font-weight: 1000;
     color: #1D95D3;
-    font-family: "Arquitecta";
+    font-family: "Arquitecta Black";
     @media (max-width: 992px) {
             flex-flow: column wrap;
             line-height: 70px;
@@ -181,7 +194,7 @@ textarea {
     color: #E8E7E7;
     font-size: 60px;
     margin: 2px 15px;
-    font-weight: 700;
+    font-weight: 500;
 
     @media (max-width: 992px) {
             flex-flow: column wrap;
