--- a/src/app/Shared/not-found/not-found.component.html
+++ b/src/app/Shared/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 
 <br><br><br>
 <div class="container d-flex justify-content-center">
-<img src="https://lh3.googleusercontent.com/drive-viewer/AFGJ81r7Y3nHjIPQpa3-_lSYJyk_0nc6Q60Q-n_-KFDs9HoVaHsw1L9wAra9Pk6IEYZhoC6Y5qtruNyL00p9ZjtY9EkeYxBWkg=w1920-h929" class=" img-fluid not-found" alt="...">
+<img src="https://rwvwpoqicbkyxtithwet.supabase.co/storage/v1/object/public/General/404%20(1).png" class=" img-fluid not-found" alt="...">
 </div>
