--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -341,7 +341,7 @@ img {
 
 .ours {
   // background-color: #fcbd07;
-  background-image: url('https://lh3.googleusercontent.com/drive-viewer/AFGJ81rYKOJkqvOGeeVdbBVwsE1tmCBcYQvIe6Vl9L6mtwqTAgBfYJY7eeFM2BfxdpAA59f4tbsyanwH0VBdjvjySC5744Vr=w1920-h929');
+  background-image: url('https://rwvwpoqicbkyxtithwet.supabase.co/storage/v1/object/public/General/stars%20(1).jpg');
   background-attachment: fixed;
   border-radius: 10px;
   color:#E8E7E7;
