--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -43,7 +43,7 @@ img {
   left: 0;
   width: 100%;
   height: 100px;
-  background-image: url('https://lh3.googleusercontent.com/drive-viewer/AFGJ81rt4sZFsSwAaagRoBZkc2WDbUd2YZJc4O3PF5WKJVtS9L_Di1wO9vDOLb61iP_TVoq_o6mhkKbD7xrfv_1CnwIuF8snqg=w1906-h633');
+  background-image: url('https://rwvwpoqicbkyxtithwet.supabase.co/storage/v1/object/public/General/wave%20(1).png');
   background-size: 1000px 100px;
   animation: wave 3s linear infinite;
 }
