--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -55,7 +55,7 @@
   <br /><br /><br /><br />
   <br /><br />
   <div>
-    <h1 class="text-center">Servicios</h1>
+    <h1 class="text-center font-weight-bold"><strong>Servicios</strong></h1>
     <br />
   </div>
   <div class="services">
@@ -116,7 +116,7 @@
 
 <section class="ours">
   <br />
-  <h1 class="text-center">¿Quiénes somos?</h1>
+ <b> <h1 class="text-center"><strong>¿Quiénes somos?</strong></h1></b>
   <br />
 
   <p class="text-center text-ours">
@@ -139,7 +139,7 @@
 
 <section class="contact">
   <br /><br /><br /><br />
-  <h1 class="text-center">Contacto</h1>
+  <h1 class="text-center"><strong>Contacto</strong></h1>
   <br />
 
   <form [formGroup]="ContactForm">
