--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -343,7 +343,7 @@ img {
   // background-color: #fcbd07;
   background-image: url('https://rwvwpoqicbkyxtithwet.supabase.co/storage/v1/object/public/General/stars%20(1).jpg');
   background-attachment: fixed;
-  border-radius: 10px;
+  //border-radius: 10px;
   color:#E8E7E7;
 }
 
