Nuevos cambios y nuevas imagenes.

--- a/src/app/features/page/Portafolio/portafolio/portafolio.component.html
+++ b/src/app/features/page/Portafolio/portafolio/portafolio.component.html
@@ -41,16 +41,19 @@
         <div class="wrapper-portafolio">
             <div class="cols">
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container-portafolio" *ngFor="let Portfolio of portfolio">
-                        <div class="front" style="background-image: url({{Portfolio.cover_page}})">
+                    <div class="container-portafolio">
+                        <div class="front" style="background-image: url('https://rwvwpoqicbkyxtithwet.supabase.co/storage/v1/object/public/General/344865092_1253380708742976_5050206025030941275_n.jpg')">
                             <div class="inner">
-                                <p>{{Portfolio.name}}</p>
-                                <span>{{Portfolio._company}}</span>
+                                <p>Surrealisty</p>
+                                <span>Onspace Agency</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>{{Portfolio.description}}</p>
+                                <p>¡Mira lo que creamos para nuestros chicos de Surrealistic! 🎨👀
+                                        <br>
+                                    Nos encanta trabajar en proyectos de diseño gráfico y este logo ha sido uno de nuestros favoritos hasta ahora. 
+                                    <br>¡Nos encanta cómo captura la esencia de la marca y la representa de una manera única y memorable!</p>
                             </div>
                         </div>
                     </div>
